--- a/IPTVPlayer/locale/de/LC_MESSAGES/IPTVPlayer.po
+++ b/IPTVPlayer/locale/de/LC_MESSAGES/IPTVPlayer.po
@@ -9,7 +9,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.8.9\n"
+"X-Generator: Poedit 1.8.11\n"
 "X-Poedit-Basepath: .\n"
 "Plural-Forms: nplurals=3; plural=(n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 "X-Poedit-SearchPath-0: ../plugin\n"
@@ -125,7 +125,7 @@ msgid ""
 "Do you want to install new one? "
 msgstr ""
 " ist veraltet. \n"
-"Wollen Sie eine neuere installieren? "
+"Möchten Sie eine neuere Version installieren? "
 
 msgid "\"Web\" streams player"
 msgstr "\"Web\" Streams Player"
@@ -3463,3 +3463,12 @@ msgstr "Menü"
 
 msgid "Icons quality"
 msgstr "Icon-Größe"
+
+msgid "Your language preference:"
+msgstr "Ihre bevorzugte Sprache:"
+
+msgid "It improves subtitles parsing.\n"
+msgstr "Es verbessert das Untertitel Parsing.\n"
+
+msgid "C subtitle parser"
+msgstr "C Untertitel Parser"
