--- a/IPTVPlayer/locale/pl/LC_MESSAGES/IPTVPlayer.po
+++ b/IPTVPlayer/locale/pl/LC_MESSAGES/IPTVPlayer.po
@@ -928,10 +928,10 @@ msgstr ""
 "Kod błędu: %r"
 
 msgid "Italian"
-msgstr ""
+msgstr "Włoskie"
 
 msgid "Italiano"
-msgstr ""
+msgstr "Włochy"
 
 msgid "Item idx[%d] not found in group[%s]."
 msgstr "Element [%d] nie znaleziony w grupie [%s]."
@@ -946,7 +946,7 @@ msgid "JSON module not available!"
 msgstr "Brak modułu json!"
 
 msgid "Japanese"
-msgstr ""
+msgstr "Japońsie"
 
 msgid "Junior"
 msgstr ""
